# amr-docking

./: .gitignore  CONCEPTS.md  README.md
amr_controller/: CMakeLists.txt  package.xml
amr_docker/: CMakeLists.txt  package.xml
amr_docker/config/: amr_docker.yaml
amr_docker/include/amr_docker/: amr_docker.hpp  docking_fsm.hpp
amr_docker/launch/: start.launch
amr_docker/node/: amr_docker_node.cpp
amr_docker/src/: amr_docker.cpp
docs/: CONCEPTS.md
models/: trolley_cart.stl
models/trolley_cart_A/: model.config  model.sdf
pointcloud-preprocess/: CMakeLists.txt  package.xml
pointcloud-preprocess/launch/: laser_trim.launch  laserscan_multi_merger.launch  passthrough_clustering.launch
target_localization/: CMakeLists.txt  package.xml
target_localization/concepts/: CMakeLists.txt  cluster_extraction.cpp  pc_clustering.cpp  random_sample_consensus.cpp
target_localization/config/: target.yaml  target_localization.yaml
target_localization/include/target_localization/: target_localization.hpp  target_rvisualization.hpp
target_localization/launch/: start.launch
target_localization/node/: target_localization_node.cpp
target_localization/src/: main_node.cpp  pc_clustering.cpp  target_localization.cpp  target_rvisualization.cpp
